# MiniVoice

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
MiniVoice/: CMakeLists.txt
MiniVoice/include/: MiniVoiceExport.hpp
MiniVoice/include/core/: VoiceBase.hpp  VoicePlayer.hpp  VoiceRecorder.hpp  VoiceSource.hpp
MiniVoice/include/utils/: Helper.hpp
MiniVoice/src/core/: VoiceBase.cpp  VoicePlayer.cpp  VoiceRecorder.cpp  VoiceSource.cpp
MiniVoice/src/utils/: Helper.cpp
MiniVoiceTest/: CMakeLists.txt
MiniVoiceTest/src/: main.cpp
